# volsurf-rs

./: .gitignore  Cargo.toml  README.md
options_core/: Cargo.toml
options_core/src/: lib.rs
options_core/src/api/: rest.rs
options_core/src/models/: option.rs  surface_update.rs
options_core/src/utils/: black_scholes.rs  plotting.rs  polars_utils.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: alpaca.md  etrade.rs  mod.rs  nasdaq_calendar.rs  rest.rs  websocket.rs
src/models/: mod.rs  option.rs  surface_update.rs  volatility.rs
src/utils/: black_scholes.rs  minifb_plotting.rs  minifb_surface.rs  mod.rs  plotting.rs  polars_utils.rs  probability.rs
src/webapp/: mod.rs
viz_native/: Cargo.toml
viz_web/: Cargo.toml
viz_web/src/: app.rs  lib.rs  main.rs  server.rs
