[package]
name = "options-rs"
version = "0.1.0"
edition = "2021"
description = "Low-latency Alpaca Markets API client for options pricing and volatility surface calculations"
authors = ["Evan Yeager"]

[dependencies]
tokio = { version = "1.28", features = ["full", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
thiserror = "2.0.12"
ndarray = { version = "0.15", features = ["serde"] }
statrs = "0.16"  # Statistical computations
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
plotters = { version = "0.3.7" }
plotters-bitmap = "0.3"
colorous = "1.0.10"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
eframe = { version = "0.31.1", features = ["default_fonts", "glow"] }
egui = { version = "0.31.1", features = ["default_fonts"] }
egui_plot = "0.31.0"
rayon = "1.7"
image = "0.25.6"
once_cell = "1"
polars = { version = "0.35", features = ["lazy", "parquet", "ipc", "dtype-datetime", "temporal", "serde", "performant"] }
governor = "0.10.0"
nonzero_ext = "0.3"
dashmap = "5.5.3"
url = "2.5.4"
