[package]
name = "options_core"
version = "0.1.0"
edition = "2021"
description = "Low-latency Alpaca Markets API client for options pricing and volatility surface calculations"
authors = ["Evan Yeager"]

crate-type = ["rlib", "cdylib"]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
tokio = { version = "1.28", optional = true, features = ["full", "rt-multi-thread"] }
thiserror = "2.0.12"
ndarray = { version = "0.15", features = ["serde"] }
statrs = "0.16"  # Statistical computations
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
plotters = { version = "0.3.7", optional = true }
plotters-bitmap = { version = "0.3", optional = true }
colorous = { version = "1.0.10", optional = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"], optional = true }
rayon = "1.7"
image = "0.25.6"
once_cell = "1"
polars = { version = "0.35", features = ["lazy", "parquet", "ipc", "dtype-datetime", "temporal", "serde", "performant"], optional = true }
governor = "0.10.0"
nonzero_ext = "0.3"
dashmap = "5.5.3"
url = "2.5.4"
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["native"]
native = ["tokio", "polars"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "reqwest", "tokio", "tokio-tungstenite"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "wasm"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
