[package]
name = "viz_native"
edition = "2021"
version = "0.1.0"

[dependencies]
options_core = { path = "../options_core", features = ["native"] }
eframe = "0.31"
egui_plot = "0.31"
dashmap = "5.5"
once_cell = "1"
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
