[package]
name = "viz_web"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
leptos = { version = "0.6", features = ["csr", "ssr"] }
leptos_axum = "0.6"
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wasm-bindgen = "0.2"
gloo = { version = "0.11", features = ["timers"] }
options_core = { path = "../options_core", default-features = false, features = ["wasm"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["csr"]
csr = ["leptos/csr"]
ssr = ["leptos/ssr"]
